# Code-Snippets

ocr/: Mistral_OCR.ipynb
uv/: README.md  pip.Dockerfile  pyproject.toml  requirements.txt  uv.Dockerfile
