[project]
name = "py-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.10.0",
    "fastapi>=0.128.0",
    "firecrawl-py>=4.14.0",
    "google-cloud-storage>=3.8.0",
    "google-genai>=1.58.0",
    "inngest>=0.5.13",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pymupdf4llm>=0.2.9",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.40.0",
]
